--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "lottie-react": "^2.4.1",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
