--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
@@ -36,7 +37,9 @@ pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyJWT==2.10.1
+python-dotenv==1.1.1
 python-multipart==0.0.20
+PyYAML==6.0.2
 requests==2.32.4
 rsa==4.9.1
 sniffio==1.3.1
@@ -46,3 +49,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
